# experimental-opt-mlir

./: .gitignore  CMakeLists.txt  README.md  TODOs.md
.github/workflows/: build_and_test.yml
include/Transforms/Affine/: AffineFullUnroll.h  AffineFullUnrollPatternRewrite.h  CMakeLists.txt  Passes.h
include/Transforms/Arith/: CMakeLists.txt  MulToAdd.h  Passes.h
lib/Transforms/Affine/: AffineFullUnroll.cpp  AffineFullUnrollPatternRewrite.cpp  CMakeLists.txt
lib/Transforms/Arith/: CMakeLists.txt  MulToAdd.cpp
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt  tutorial-opt.cpp
